--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,4 +98,12 @@
   input[type=number] {
     -moz-appearance:textfield;
   }
+
+  .hide-scroll-bar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .hide-scroll-bar::-webkit-scrollbar {
+    display: none;
+  }
 }
